--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.12.0+1
   rxdart: ^0.20.0
   intl: ^0.15.7
+  shared_preferences: ^0.5.1+2
 
 dev_dependencies:
   flutter_test:
