--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   rxdart: ^0.20.0
   intl: ^0.15.7
   shared_preferences: ^0.5.1+2
+  flare_flutter: ^1.3.6
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +34,6 @@ flutter_icons:
   adaptive_icon_background: "#FFFAFAFA"
   adaptive_icon_foreground: "assets/icon/icon-app.png"
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
@@ -46,10 +46,39 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/animation/clear.flr
+   - assets/animation/cloudy.flr
+   - assets/animation/heavy_rain.flr
+   - assets/animation/heavy_rain_day.flr
+   - assets/animation/heavy_rain_night.flr
+   - assets/animation/light_rain_day.flr
+   - assets/animation/light_rain_night.flr
+   - assets/animation/light_rain.flr
+   - assets/animation/partly_cloudy_day.flr
+   - assets/animation/partly_cloudy_night.flr
+   - assets/animation/snow.flr
+   - assets/animation/sunny.flr
+   - assets/animation/thundery_rainy_day.flr
+   - assets/animation/thundery_rainy_night.flr
+   - assets/animation/windy.flr
 
+   - assets/icon/clear.png
+   - assets/icon/cloudy.png
+   - assets/icon/heavy_rain.png
+   - assets/icon/heavy_rain_day.png
+   - assets/icon/heavy_rain_night.png
+   - assets/icon/light_rain_day.png
+   - assets/icon/light_rain_night.png
+   - assets/icon/light_rain.png
+   - assets/icon/partly_cloudy_day.png
+   - assets/icon/partly_cloudy_night.png
+   - assets/icon/snow.png
+   - assets/icon/sunny.png
+   - assets/icon/thundery_rainy_day.png
+   - assets/icon/thundery_rainy_night.png
+   - assets/icon/windy.png
+   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
