--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.15.7
   shared_preferences: ^0.5.1+2
   flare_flutter: ^1.3.6
+  connectivity: ^0.4.3+1
 
 dev_dependencies:
   flutter_test:
