--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: A new Flutter project.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -21,12 +21,15 @@ dependencies:
   intl: ^0.15.7
   shared_preferences: ^0.5.1+2
   flare_flutter: ^1.3.6
-  connectivity: ^0.4.3+1
+  connectivity:
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.7.0
+  build_runner:
+  json_serializable:
 
 flutter_icons:
   android: true 
